--- a/src/stylesheets/Header.scss
+++ b/src/stylesheets/Header.scss
@@ -67,16 +67,16 @@
   }
   .text {
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
     text-align: center;
 
     h1 {
       font-size: 20px;
     }
 
-    div {
+    .text__welcome--box {
       position: relative;
       display: inline-block;
     }
@@ -138,28 +138,27 @@
         font-size: 14px;
         display: inline-block;
         color: #2e2e2e;
+        font-weight: 600;
         margin: 5px;
+        opacity: 0;
+        -webkit-animation: opacity 1s steps(20, end);
+        animation: opacity 1s steps(20, end);
+        -webkit-animation-fill-mode: forwards;
+        animation-fill-mode: forwards;
       }
-
-        p {
-          opacity: 0;
-          -webkit-animation: opacity 1s steps(20, end);
-          animation: opacity 1s steps(20, end);
-          -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
-        }
-        & p:nth-child(1) {
-          -webkit-animation-delay: 3.5s;
-          animation-delay: 3.5s;
-        }
-        & p:nth-child(2) {
-          -webkit-animation-delay: 5.5s;
-          animation-delay: 5.5s;
-        }
-        & p:nth-child(3) {
-          -webkit-animation-delay: 8s;
-          animation-delay: 8s;
-        }
+      
+      & p:nth-child(1) {
+        -webkit-animation-delay: 3.5s;
+        animation-delay: 3.5s;
+      }
+      & p:nth-child(2) {
+        -webkit-animation-delay: 5.5s;
+        animation-delay: 5.5s;
+      }
+      & p:nth-child(3) {
+        -webkit-animation-delay: 8s;
+        animation-delay: 8s;
+      }
 
       @include forTablet {
         p {
@@ -218,7 +217,6 @@
           animation-delay: 11s;
         }
       }
-
     }
   }
 }
