--- a/src/stylesheets/utils/_variables.scss
+++ b/src/stylesheets/utils/_variables.scss
@@ -7,3 +7,8 @@ $fontTitle: 'Quicksand', sans-serif;
 
 $tablet: 768px;
 $pc: 1200px;
+
+// COLORS //
+
+$colorMain: #59c4ca;
+$colorSecondary: #ce3635;
