--- a/src/stylesheets/About.scss
+++ b/src/stylesheets/About.scss
@@ -1,14 +1,170 @@
+@import "utils/variables";
+@import "utils/mixins";
+
 .About {
-  min-height: 50vh;
+  min-height: 80vh;
+
+  &__header {
+    border-top: 3px solid $colorSecondary;
+  }
+
+  &__content {
+    display: flex;
+    width: 100%;
+    min-height: 35vh;
+  }
+
+  &__past {
+    width: 50%;
+    position: relative;
+    overflow: hidden;
+
+    &:hover {
+      overflow: visible;
+      z-index: 10;
+    }
+
+    &--image {
+      width: 50%;
+      height: 100%;
+      background: url("http://localhost:3000//images/picture_maria_garvia.png");
+      filter: grayscale(100%);
+      background-size: contain;
+      background-position: top;
+      background-repeat: no-repeat;
+      position: absolute;
+      right: -25%;
+    }
+
+    &--info {
+      text-align: right;
+      position: relative;
+      padding-left: 10%;
+      h3 {
+        text-align: right;
+      }
+      p {
+        text-align: right;
+        right: 0;
+      }
+    }
+  }
+  &__future {
+    // background-color: lightblue;
+    width: 50%;
+    // min-height: 50vh;
+    position: relative;
+    overflow: hidden;
+
+    &:hover {
+      overflow: visible;
+      z-index: 10;
+    }
+
+    &--image {
+      background: url("http://localhost:3000//images/picture_maria_garvia.png");
+      width: 50%;
+      height: 100%;
+      background-size: contain;
+      background-position: top;
+      background-repeat: no-repeat;
+      position: absolute;
+      left: -25%;
+    }
+
+    &--info {
+      right: 0;
+      padding-right: 10%;
+
+      // h3 {
+      //   text-align: right;
+      // }
+    }
+  }
+
+  &__info-section {
+    // border: 1px solid red;
+    margin-top: 30px;
+    width: 75%;
+    height: 100%;
+    position: absolute;
+    box-sizing: border-box;
+
+    h3 {
+      margin-bottom: 10px;
+    }
+  }
+
+  &__love {
+    width: 100vw;
+    text-align: center;
+    color: #ce3635;
+    font-size: 45px;
+    padding: 20px 0;
+  }
+
+  &__skills {
+    // border: 1px solid blue;
+    width: 100vw;
+    padding: 20px;
+    box-sizing: border-box;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+
+    div {
+      box-shadow: 3px 3px lightgrey;
+      // border: 1px solid red;
+      width: 10vw;
+      height: 5vw;
+      border-radius: 5px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      p {
+        font-weight: 600;
+        color: $colorMain;
+      }
+
+      span {
+        padding: 0 5px;
+        margin-top: 5px;
+        font-size: 12px;
+        text-transform: uppercase;
+
+        span:first-child {
+          border-right: 1px solid lightgrey;
+        }
+
+        span:last-child {
+          border-left: 1px solid lightgrey;
+        }
+      }
+    }
+
+  }
+}
+
+.timeline {
+  width: 90%;
+  height: 40%;
+  position: relative;
+  &__line {
+    height: 2px;
+    background-color: #d4c7c7e1;
+    margin-top: 100px;
+  }
+}
+
+.info-icons {
   display: flex;
-  &__image {
-    width: 30vw;
-    height: 50vh;
-    background: violet;
-  }
-  &__info {
-    background-color: lightblue;
-    width: 70vw;
-    min-height: 50vh;
-  }
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  padding: 5px;
+}
+
+.cv {
+  min-height: 20vh;
 }
