--- a/src/stylesheets/Quote.scss
+++ b/src/stylesheets/Quote.scss
@@ -1,7 +1,29 @@
 .Quote {
   min-height: 50vh;
-  background-color: #e4e4e4;
+  background: url("https://images.unsplash.com/photo-1589561253898-768105ca91a8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1349&q=80");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  h3 {
+    font-size: 40px;
+    margin: 5px;
+    text-transform: uppercase;
+  }
+  .work {
+    color: pink;
+  }
+
+  .coffee {
+    color: orange;
+  }
+
+  .code {
+    color: cyan;
+  }
 }
