--- a/src/stylesheets/utils/_variables.scss
+++ b/src/stylesheets/utils/_variables.scss
@@ -10,5 +10,11 @@ $pc: 1200px;
 
 // COLORS //
 
-$colorMain: #59c4ca;
-$colorSecondary: #ce3635;
+$colorHeader: #59c4ca;
+$colorProjects: #32e0ea;
+$colorAbout: #ce3635;
+$colorCv: #4F9B5A;
+$colorContact: #adabab;
+
+// $colorBright: #f2f1c6;
+$colorBright: #f2f1c6;
