--- a/src/stylesheets/About.scss
+++ b/src/stylesheets/About.scss
@@ -2,16 +2,34 @@
 @import "utils/mixins";
 
 .About {
-  min-height: 80vh;
+  min-height: 100vh;
+  position: relative;
+  display: flex;
+  border-left: 3px solid $colorAbout;
 
-  &__header {
-    border-top: 3px solid $colorSecondary;
+  &__icons {
+    width: 4vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    // border: 1px solid blue;
+    
+    img {
+      width: 55%;
+    }
+
+  }
+
+  &__section {
+    width: 96vw;
   }
 
   &__content {
     display: flex;
     width: 100%;
-    min-height: 35vh;
+    min-height: 30vh;
   }
 
   &__past {
@@ -22,6 +40,11 @@
     &:hover {
       overflow: visible;
       z-index: 10;
+      .About__past--info {
+        h3 {
+          color: $colorProjects;
+        }
+      }
     }
 
     &--image {
@@ -34,6 +57,29 @@
       background-repeat: no-repeat;
       position: absolute;
       right: -25%;
+    }
+
+    &--text {
+      text-align: justify;
+      height: 100%;
+      width: 40vw;
+      position: absolute;
+      right: -100%;
+      padding: 0px 10% 0 6%;
+      background: white;
+      box-sizing: border-box;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      &:hover {
+        visibility: hidden;
+      }
+
+      span {
+        font-weight: 600;
+        color: $colorProjects;
+      }
     }
 
     &--info {
@@ -59,6 +105,11 @@
     &:hover {
       overflow: visible;
       z-index: 10;
+      .About__future--info {
+        h3 {
+          color: $colorProjects;
+        }
+      }
     }
 
     &--image {
@@ -70,6 +121,29 @@
       background-repeat: no-repeat;
       position: absolute;
       left: -25%;
+    }
+
+    &--text {
+      text-align: justify;
+      height: 100%;
+      width: 40vw;
+      position: absolute;
+      left: -100%;
+      padding: 0px 6% 0 10%;
+      background: white;
+      box-sizing: border-box;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      &:hover {
+        visibility: hidden;
+      }
+
+      span {
+        font-weight: 600;
+        color: $colorProjects;
+      }
     }
 
     &--info {
@@ -84,11 +158,15 @@
 
   &__info-section {
     // border: 1px solid red;
-    margin-top: 30px;
+    // margin-top: 30px;
     width: 75%;
     height: 100%;
     position: absolute;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
 
     h3 {
       margin-bottom: 10px;
@@ -96,7 +174,7 @@
   }
 
   &__love {
-    width: 100vw;
+    // width: 100vw;
     text-align: center;
     color: #ce3635;
     font-size: 45px;
@@ -105,7 +183,7 @@
 
   &__skills {
     // border: 1px solid blue;
-    width: 100vw;
+    // width: 100vw;
     padding: 20px;
     box-sizing: border-box;
     display: flex;
@@ -115,17 +193,17 @@
     div {
       box-shadow: 3px 3px lightgrey;
       // border: 1px solid red;
-      width: 10vw;
-      height: 5vw;
+      width: 16vw;
+      height: 8vw;
       border-radius: 5px;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
 
-      p {
+      h3 {
         font-weight: 600;
-        color: $colorMain;
+        color: $colorProjects;
       }
 
       span {
@@ -144,27 +222,67 @@
       }
     }
 
+    &--box {
+      min-height: 40vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+    }
+
+    &--hover {
+      position: absolute;
+      background-color: $colorProjects;
+      color: white;
+      visibility: hidden;
+
+      p {
+        font-weight: 600;
+      }
+
+    }
+
+    &--item:hover {
+            .About__skills--hover {
+        visibility: visible;
+      }
+    }
   }
 }
 
-.timeline {
-  width: 90%;
-  height: 40%;
-  position: relative;
-  &__line {
-    height: 2px;
-    background-color: #d4c7c7e1;
-    margin-top: 100px;
-  }
-}
+// .timeline {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   position: absolute;
+//   bottom: 60px;
+//   right: 0;
+//   width: 80%;
+//   // height: 40%;
+//   // position: relative;
+//   &__line {
+//     height: 2px;
+//     background-color: #d4c7c7e1;
+//     // margin-top: 100px;
+//   }
+//   &__icons {
+//     display: flex;
+//     flex-direction: row-reverse;
+//     justify-content: space-between;
+//     padding: 5px;
+    
+//     img {
+//       width: 30px;
+//       height: 20px;
+//     }
+//   }
+//   &__info {
+//     display: flex;
+//     flex-direction: row-reverse;
+//     justify-content: space-between;
+//     padding: 5px;
+//   }
+// }
 
-.info-icons {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-  padding: 5px;
-}
-
-.cv {
-  min-height: 20vh;
-}
+// .cv {
+//   min-height: 20vh;
+// }
