--- a/src/stylesheets/Contact.scss
+++ b/src/stylesheets/Contact.scss
@@ -1,9 +1,140 @@
+@import "utils/variables";
+@import "utils/mixins";
+
 .Contact {
-  background-color: red;
+  border-left: 3px solid $colorContact;
+  // background-color: red;
   min-height: 50vh;
+  position: relative;
   // width: 100vw;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+  // align-items: center;
+
+  // .circles {
+  //   div {
+  //     width: 20px;
+  //     height: 20px;
+  //     background: red;
+  //     border-radius: 50px;
+  //     position: absolute;
+
+  //     &:nth-child(1) {
+  //       background: purple;
+  //       right: 35px;
+  //       top: 25px;
+  //     }
+  //     &:nth-child(2) {
+  //       background: green;
+  //       right: 50px;
+  //       top: 30px;
+  //     }
+  //     &:nth-child(3) {
+  //       background: blue;
+  //       right: 37px;
+  //       top: 40px;
+  //     }
+  //   }
+  // }
+}
+
+#contact-info {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 30vh;
+
+  .links {
+    display: flex;
+    min-width: 500px;
+    justify-content: space-between;
+
+    a {
+      text-decoration: none;
+      color: $colorContact;
+      font-size: 32px;
+      display: block;
+      position: relative;
+
+      &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: 1px solid transparent;
+        transition: all 0.3s;
+
+        &:hover {
+          /* transform: rotate(35deg) skew(-20deg); */
+          --transformed-box-diagonal-length: 164%;
+          width: var(--transformed-box-diagonal-length);
+          left: calc((100% - var(--transformed-box-diagonal-length)) / 2);
+        }
+      }
+
+      div {
+        position: relative;
+        display: block;
+        width: 55px;
+        height: 55px;
+        transition: transform 0.3s;
+      }
+
+      span {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        transition: 0.5s;
+        /* transition-property: opacity, transform;
+        transition-duration: 0.5s; */
+        border: 1px solid $colorContact;
+        /* border-color: $colorContact; */
+        border-radius: 5px;
+
+        &:nth-child(5) {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          position: relative;
+          /* border-color: $colorContact; */
+        }
+      }
+
+      &:hover {
+        div {
+          transform: rotate(-35deg) skew(20deg);
+        }
+
+        span:nth-child(5) {
+          transform: translate(20px, -20px);
+          opacity: 1;
+        }
+
+        span:nth-child(4) {
+          transform: translate(15px, -15px);
+          opacity: 0.8;
+        }
+
+        span:nth-child(3) {
+          transform: translate(10px, -10px);
+          opacity: 0.6;
+        }
+
+        span:nth-child(2) {
+          transform: translate(5px, -5px);
+          opacity: 0.4;
+        }
+
+        span:nth-child(1) {
+          opacity: 0.2;
+        }
+      }
+    }
+  }
 }
