--- a/src/stylesheets/Header.scss
+++ b/src/stylesheets/Header.scss
@@ -1,226 +1,321 @@
 @import "utils/variables";
 @import "utils/mixins";
 
-.Header__content {
-  background: url("https://images.pexels.com/photos/1111317/pexels-photo-1111317.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
-  background-size: cover;
-  background-position: center;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  @include forPc {
-    padding-left: 20%;
-  }
-
-  .aloha {
-    height: 30%;
-    width: 100%;
+.Header {
+  &__content {
+    background: url("https://images.pexels.com/photos/1111317/pexels-photo-1111317.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: 42px;
-    color: white;
-    text-transform: uppercase;
+    position: relative;
+    // border-bottom: 3px solid $colorHeader;
 
-    @include forTablet {
-      font-size: 90px;
+    @include forPc {
+      // padding-left: 20%;
     }
 
-    div {
-      font-family: $fontTitle;
-      display: inline-block;
-      padding: 5px;
-      transform: scale(1);
-      transition: scale 0.8 ease-in;
-      transition-duration: 0.2s;
-      &:hover {
-        cursor: pointer;
-      }
-    }
-
-    &-a:hover {
-      animation: bounce 0.8s;
-      transform-origin: center bottom;
-    }
-
-    &-l:hover {
-      transform-origin: bottom center;
-      animation: swing 0.8s;
-    }
-
-    &-o:hover {
-      animation: rubberBand 0.8s;
-    }
-
-    &-h:hover {
-      animation: jello 0.8s;
-      transform-origin: center;
-    }
-
-    &-ex:hover {
-      transform-origin: top center;
-      animation: swing 0.8s;
-    }
-  }
-  .text {
-    width: 100%;
-    // display: flex;
-    // justify-content: center;
-    // align-items: center;
-    text-align: center;
-
-    h1 {
-      font-size: 20px;
-    }
-
-    .text__welcome--box {
-      position: relative;
-      display: inline-block;
-    }
-
-    &__welcome {
-      display: inline-block;
-      width: 245px;
-      border-right: 2px solid rgba(255, 255, 255, 0.75);
-      text-align: center;
-      white-space: nowrap;
-      overflow: hidden;
-      -webkit-animation: type steps(40, end);
-      animation: type steps(40, end);
-      -webkit-animation-fill-mode: forwards;
-      animation-fill-mode: forwards;
-      animation-duration: 2s;
-      -webkit-animation-duration: 2s;
-
-      @include forTablet {
-        font-size: 33px;
-        width: 399px;
-      }
-    }
-
-    &__mery {
-      color: white;
-    }
-
-    &__front {
-      color: cyan;
-    }
-
-    &__junior {
-      position: relative;
-      top: -5px;
-      font-size: 15px;
-      text-transform: uppercase;
-      color: rgba(255, 255, 255, 0.479);
-      text-align: right;
-      opacity: 0;
-      -webkit-animation: opacity 1s steps(20, end);
-      animation: opacity 1s steps(20, end);
-      -webkit-animation-delay: 2s;
-      animation-delay: 2s;
-      -webkit-animation-fill-mode: forwards;
-      animation-fill-mode: forwards;
-    }
-
-    &__description {
-      font-size: 16px;
-      padding: 10px;
-      color: #2c2c2c;
+    .aloha {
+      height: 30%;
+      width: 100%;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
+      font-size: 42px;
+      color: white;
+      text-transform: uppercase;
 
-      p {
-        font-size: 14px;
+      @include forTablet {
+        font-size: 90px;
+      }
+
+      div {
+        font-family: $fontTitle;
         display: inline-block;
-        color: #2e2e2e;
-        font-weight: 600;
-        margin: 5px;
+        padding: 5px;
+        transform: scale(1);
+        transition: scale 0.8 ease-in;
+        transition-duration: 0.2s;
+        &:hover {
+          cursor: pointer;
+        }
+      }
+
+      &-a:hover {
+        animation: bounce 0.8s;
+        transform-origin: center bottom;
+      }
+
+      &-l:hover {
+        transform-origin: bottom center;
+        animation: swing 0.8s;
+      }
+
+      &-o:hover {
+        animation: rubberBand 0.8s;
+      }
+
+      &-h:hover {
+        animation: jello 0.8s;
+        transform-origin: center;
+      }
+
+      &-ex:hover {
+        transform-origin: top center;
+        animation: swing 0.8s;
+      }
+    }
+    .text {
+      width: 100%;
+      // display: flex;
+      // justify-content: center;
+      // align-items: center;
+      text-align: center;
+
+      h1 {
+        font-size: 20px;
+      }
+
+      .text__welcome--box {
+        position: relative;
+        display: inline-block;
+      }
+
+      &__welcome {
+        display: inline-block;
+        width: 245px;
+        border-right: 2px solid rgba(255, 255, 255, 0.75);
+        text-align: center;
+        white-space: nowrap;
+        overflow: hidden;
+        -webkit-animation: type steps(40, end);
+        animation: type steps(40, end);
+        -webkit-animation-fill-mode: forwards;
+        animation-fill-mode: forwards;
+        animation-duration: 2s;
+        -webkit-animation-duration: 2s;
+
+        @include forTablet {
+          font-size: 33px;
+          width: 399px;
+        }
+      }
+
+      &__mery {
+        color: white;
+      }
+
+      &__front {
+        color: cyan;
+      }
+
+      &__junior {
+        position: relative;
+        top: -5px;
+        font-size: 15px;
+        text-transform: uppercase;
+        color: rgba(255, 255, 255, 0.479);
+        text-align: right;
         opacity: 0;
         -webkit-animation: opacity 1s steps(20, end);
         animation: opacity 1s steps(20, end);
+        -webkit-animation-delay: 2s;
+        animation-delay: 2s;
         -webkit-animation-fill-mode: forwards;
         animation-fill-mode: forwards;
       }
-      
-      & p:nth-child(1) {
-        -webkit-animation-delay: 3.5s;
-        animation-delay: 3.5s;
-      }
-      & p:nth-child(2) {
-        -webkit-animation-delay: 5.5s;
-        animation-delay: 5.5s;
-      }
-      & p:nth-child(3) {
-        -webkit-animation-delay: 8s;
-        animation-delay: 8s;
-      }
 
-      @include forTablet {
+      &__description {
+        font-size: 16px;
+        padding: 10px;
+        color: #2c2c2c;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
         p {
-          font-size: 16px;
+          font-size: 14px;
+          display: inline-block;
+          color: #2e2e2e;
+          font-weight: 600;
+          margin: 5px;
+          opacity: 0;
+          -webkit-animation: opacity 1s steps(20, end);
+          animation: opacity 1s steps(20, end);
+          -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
         }
+
         & p:nth-child(1) {
-          width: 490px;
+          -webkit-animation-delay: 3.5s;
+          animation-delay: 3.5s;
         }
-
         & p:nth-child(2) {
-          width: 700px;
+          -webkit-animation-delay: 5.5s;
+          animation-delay: 5.5s;
+        }
+        & p:nth-child(3) {
+          -webkit-animation-delay: 8s;
+          animation-delay: 8s;
         }
 
-        & p:nth-child(3) {
-          width: 390px;
+        @include forTablet {
+          p {
+            font-size: 16px;
+          }
+          & p:nth-child(1) {
+            width: 490px;
+          }
+
+          & p:nth-child(2) {
+            width: 700px;
+          }
+
+          & p:nth-child(3) {
+            width: 390px;
+          }
+        }
+
+        @include forPc {
+          p {
+            font-size: 18px;
+          }
+          & p:nth-child(1) {
+            width: 490px;
+            -webkit-animation: type steps(40, end);
+            animation: type steps(40, end);
+            -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
+            -webkit-animation-duration: 3s;
+            animation-duration: 3s;
+            -webkit-animation-delay: 3s;
+            animation-delay: 3s;
+          }
+
+          & p:nth-child(2) {
+            width: 985px;
+            -webkit-animation: type steps(40, end);
+            animation: type steps(40, end);
+            -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
+            -webkit-animation-duration: 4s;
+            animation-duration: 4s;
+            -webkit-animation-delay: 6.5s;
+            animation-delay: 6.5s;
+          }
+
+          & p:nth-child(3) {
+            width: 390px;
+            -webkit-animation: type steps(40, end);
+            animation: type steps(40, end);
+            -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
+            -webkit-animation-duration: 2s;
+            animation-duration: 2s;
+            -webkit-animation-delay: 11s;
+            animation-delay: 11s;
+          }
         }
       }
+    }
 
-      @include forPc {
-        p {
-          font-size: 18px;
-        }
-        & p:nth-child(1) {
-          width: 490px;
-          -webkit-animation: type steps(40, end);
-          animation: type steps(40, end);
-          -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
-          -webkit-animation-duration: 3s;
-          animation-duration: 3s;
-          -webkit-animation-delay: 3s;
-          animation-delay: 3s;
-        }
+    .scroll {
+      position: absolute;
+      bottom: 50px;
+      opacity: 0;
+      -webkit-animation: opacity 1s steps(20, end);
+      animation: opacity 1s steps(20, end);
+      -webkit-animation-fill-mode: forwards;
+      animation-fill-mode: forwards;
+      -webkit-animation-delay: 13.5s;
+      animation-delay: 13.5s;
 
-        & p:nth-child(2) {
-          width: 975px;
-          -webkit-animation: type steps(40, end);
-          animation: type steps(40, end);
-          -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
-          -webkit-animation-duration: 4s;
-          animation-duration: 4s;
-          -webkit-animation-delay: 6.5s;
-          animation-delay: 6.5s;
-        }
+      a {
+        padding-top: 80px;
+        display: inline-block;
 
-        & p:nth-child(3) {
-          width: 390px;
-          -webkit-animation: type steps(40, end);
-          animation: type steps(40, end);
-          -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
-          -webkit-animation-duration: 2s;
-          animation-duration: 2s;
-          -webkit-animation-delay: 11s;
-          animation-delay: 11s;
+        span {
+          position: absolute;
+          top: 0;
+          left: 50%;
+          width: 30px;
+          height: 50px;
+          margin-left: -15px;
+          border: 2px solid #fff;
+          border-radius: 50px;
+          box-sizing: border-box;
+
+          &::before {
+            position: absolute;
+            top: 10px;
+            left: 50%;
+            content: "";
+            width: 6px;
+            height: 6px;
+            margin-left: -3px;
+            background-color: #fff;
+            border-radius: 100%;
+            -webkit-animation: sdb10 2s infinite;
+            animation: sdb10 2s infinite;
+            box-sizing: border-box;
+          }
+
+          &::after {
+            position: absolute;
+            bottom: -18px;
+            left: 50%;
+            width: 18px;
+            height: 18px;
+            content: "";
+            margin-left: -9px;
+            border-left: 1px solid #fff;
+            border-bottom: 1px solid #fff;
+            -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+            box-sizing: border-box;
+          }
         }
+      }
+    }
+
+    @-webkit-keyframes sdb10 {
+      0% {
+        -webkit-transform: translate(0, 0);
+        opacity: 0;
+      }
+      40% {
+        opacity: 1;
+      }
+      80% {
+        -webkit-transform: translate(0, 20px);
+        opacity: 0;
+      }
+      100% {
+        opacity: 0;
+      }
+    }
+    @keyframes sdb10 {
+      0% {
+        transform: translate(0, 0);
+        opacity: 0;
+      }
+      40% {
+        opacity: 1;
+      }
+      80% {
+        transform: translate(0, 20px);
+        opacity: 0;
+      }
+      100% {
+        opacity: 0;
       }
     }
   }
 }
-
 .typing {
   @include forPc {
     border-right: 2px solid rgba(255, 255, 255, 0.75);
