--- a/src/stylesheets/Menu.scss
+++ b/src/stylesheets/Menu.scss
@@ -35,8 +35,8 @@
       }
 
       &-box {
-        width: 30px;
-        height: 24px;
+        width: 40px;
+        height: 40px;
         position: relative;
       }
 
@@ -57,14 +57,14 @@
         transition-duration: 0.2s;
 
         &:before {
-          top: -7px;
+          top: -10px;
           width: 50%;
           transition: top 0.2s ease 0.25s, opacity 0.2s ease,
             width 0ms ease 0.25s;
         }
 
         &:after {
-          bottom: -7px;
+          bottom: -10px;
           width: 50%;
           right: 0;
           transition: bottom 0.2s ease 0.25s,
@@ -152,12 +152,12 @@
     }
 
     &--cv:hover {
-      color: #ea07ac;
+      color: $colorCv;
       font-weight: 600;
     }
 
     &--contact:hover {
-      color: green;
+      color: $colorContact;
       font-weight: 600;
     }
   }
