header and portfolio sections finished

--- a/src/stylesheets/About.scss
+++ b/src/stylesheets/About.scss
@@ -186,9 +186,13 @@
     // width: 100vw;
     padding: 20px;
     box-sizing: border-box;
-    display: flex;
+    
+    @include forTablet {
+      display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+
+    }
 
     div {
       box-shadow: 3px 3px lightgrey;
