--- a/src/stylesheets/Header.scss
+++ b/src/stylesheets/Header.scss
@@ -3,20 +3,15 @@
 
 .Header {
   &__content {
-    background: url("https://images.pexels.com/photos/1111317/pexels-photo-1111317.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+    background: url("https://images.pexels.com/photos/1111317/pexels-photo-1111317.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260")
+      center no-repeat;
     background-size: cover;
-    background-position: center;
     height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     position: relative;
-    // border-bottom: 3px solid $colorHeader;
-
-    @include forPc {
-      // padding-left: 20%;
-    }
 
     .aloha {
       height: 30%;
@@ -32,16 +27,13 @@
         font-size: 90px;
       }
 
-      div {
+      span {
         font-family: $fontTitle;
         display: inline-block;
         padding: 5px;
         transform: scale(1);
-        transition: scale 0.8 ease-in;
-        transition-duration: 0.2s;
-        &:hover {
-          cursor: pointer;
-        }
+        transition: scale 0.8 ease-in 0.2s;
+        cursor: pointer;
       }
 
       &-a:hover {
@@ -69,24 +61,16 @@
       }
     }
     .text {
-      width: 100%;
-      // display: flex;
-      // justify-content: center;
-      // align-items: center;
       text-align: center;
 
-      h1 {
-        font-size: 20px;
-      }
-
-      .text__welcome--box {
-        position: relative;
+      &__welcome--box {
         display: inline-block;
       }
 
       &__welcome {
-        display: inline-block;
+        font-size: 20px;
         width: 245px;
+        display: inline-block;
         border-right: 2px solid rgba(255, 255, 255, 0.75);
         text-align: center;
         white-space: nowrap;
@@ -104,6 +88,16 @@
         }
       }
 
+      .typing {
+        @include forPc {
+          border-right: 2px solid rgba(255, 255, 255, 0.75);
+          text-align: center;
+          white-space: nowrap;
+          overflow: hidden;
+          opacity: 0;
+        }
+      }
+
       &__mery {
         color: white;
       }
@@ -113,9 +107,9 @@
       }
 
       &__junior {
+        font-size: 12px;
         position: relative;
         top: -5px;
-        font-size: 15px;
         text-transform: uppercase;
         color: rgba(255, 255, 255, 0.479);
         text-align: right;
@@ -126,22 +120,27 @@
         animation-delay: 2s;
         -webkit-animation-fill-mode: forwards;
         animation-fill-mode: forwards;
+
+        @include forTablet {
+          font-size: 15px;
+        }
       }
 
       &__description {
-        font-size: 16px;
-        padding: 10px;
+        font-size: 14px;
+        padding: 10px 18px;
         color: #2c2c2c;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
 
+        @include forTablet {
+          font-size: 18px;
+        }
+
         p {
-          font-size: 14px;
           display: inline-block;
-          color: #2e2e2e;
-          font-weight: 600;
           margin: 5px;
           opacity: 0;
           -webkit-animation: opacity 1s steps(20, end);
@@ -164,26 +163,18 @@
         }
 
         @include forTablet {
-          p {
-            font-size: 16px;
-          }
           & p:nth-child(1) {
             width: 490px;
           }
-
           & p:nth-child(2) {
-            width: 700px;
+            width: 640px;
           }
-
           & p:nth-child(3) {
             width: 390px;
           }
         }
 
         @include forPc {
-          p {
-            font-size: 18px;
-          }
           & p:nth-child(1) {
             width: 490px;
             -webkit-animation: type steps(40, end);
@@ -197,7 +188,7 @@
           }
 
           & p:nth-child(2) {
-            width: 985px;
+            width: 850px;
             -webkit-animation: type steps(40, end);
             animation: type steps(40, end);
             -webkit-animation-fill-mode: forwards;
@@ -223,35 +214,72 @@
       }
     }
 
-    .scroll {
+    .scrollDown {
       position: absolute;
-      bottom: 50px;
+      bottom: 10px;
       opacity: 0;
       -webkit-animation: opacity 1s steps(20, end);
       animation: opacity 1s steps(20, end);
       -webkit-animation-fill-mode: forwards;
       animation-fill-mode: forwards;
-      -webkit-animation-delay: 13.5s;
-      animation-delay: 13.5s;
+      -webkit-animation-delay: 8.5s;
+      animation-delay: 9.5s;
+
+      @include forTablet {
+        bottom: 50px;
+      }
+
+      @include forPc {
+        -webkit-animation-delay: 13.5s;
+        animation-delay: 13.5s;
+      }
 
       a {
-        padding-top: 80px;
+        padding-top: 45px;
+        font-size: 14px;
+        color: rgba(255, 255, 255, 0.479);
         display: inline-block;
+
+        @include forTablet {
+          padding-top: 80px;
+          font-size: 16px;
+        }
 
         span {
           position: absolute;
           top: 0;
           left: 50%;
-          width: 30px;
-          height: 50px;
+          width: 24px;
+          height: 39px;
           margin-left: -15px;
-          border: 2px solid #fff;
+          border: 2px solid rgba(255, 255, 255, 0.479);
           border-radius: 50px;
           box-sizing: border-box;
 
+          @include forTablet {
+            width: 30px;
+            height: 50px;
+
+            &::after {
+              position: absolute;
+              bottom: -18px;
+              left: 50%;
+              width: 18px;
+              height: 18px;
+              content: "";
+              margin-left: -9px;
+              border-left: 1px solid;
+              border-bottom: 1px solid;
+              border-color: rgba(255, 255, 255, 0.479);
+              -webkit-transform: rotate(-45deg);
+              transform: rotate(-45deg);
+              box-sizing: border-box;
+            }
+          }
+
           &::before {
             position: absolute;
-            top: 10px;
+            top: 6px;
             left: 50%;
             content: "";
             width: 6px;
@@ -262,21 +290,10 @@
             -webkit-animation: sdb10 2s infinite;
             animation: sdb10 2s infinite;
             box-sizing: border-box;
-          }
 
-          &::after {
-            position: absolute;
-            bottom: -18px;
-            left: 50%;
-            width: 18px;
-            height: 18px;
-            content: "";
-            margin-left: -9px;
-            border-left: 1px solid #fff;
-            border-bottom: 1px solid #fff;
-            -webkit-transform: rotate(-45deg);
-            transform: rotate(-45deg);
-            box-sizing: border-box;
+            @include forTablet {
+              top: 10px
+            }
           }
         }
       }
@@ -316,15 +333,8 @@
     }
   }
 }
-.typing {
-  @include forPc {
-    border-right: 2px solid rgba(255, 255, 255, 0.75);
-    text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
-    opacity: 0;
-  }
-}
+
+// ANIMATIONS
 
 @keyframes swing {
   20% {
