--- a/src/stylesheets/Quote.scss
+++ b/src/stylesheets/Quote.scss
@@ -6,49 +6,40 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  display: flex;
 
-  &__row {
-    flex-direction: row;
-  }
-
-  &__column {
-    flex-direction: column;
-  }
-
-  img {
-    height: 50px;
-  }
-
-  h3 {
+  &__title {
     font-size: 40px;
     text-transform: uppercase;
+    text-align: center;
   }
 
-  &__love {
-    h3 {
-      color: red;
+  &__love-coding {
+    .icon {
+      background: url("https://media.giphy.com/media/LpDmM2wSt6Hm5fKJVa/giphy.gif") center no-repeat;
+      background-size: cover;
+      height: 50px;
+      width: 50px;
     }
   }
 
-  &__cv {
+  &__CV {
     border-left: 3px solid $colorCv;
-    * {
+    .cv-download {
       color: white;
-      margin: 20px 0;
-    }
-  }
-}
+      border: 1px solid white;
+      padding: 10px;
+      border-radius: 25px;
+      margin-top: 20px;
+      transition: all ease-in-out 0.2s;
 
-.cv {
-  border: 1px solid white;
-  padding: 10px;
-  border-radius: 25px;
-  &:hover {
-    color: $colorCv;
-    background-color: rgba(255, 255, 255, 0.9);
-    border: none;
-    // opacity: 0.7;
-    font-weight: 600;
+      &:hover {
+        color: $colorCv;
+        background-color: rgba(255, 255, 255, 0.9);
+      }
+
+      @include forTablet{
+        margin-top: 40px;
+      }
+    }
   }
 }
