--- a/src/stylesheets/ScrollBtn.scss
+++ b/src/stylesheets/ScrollBtn.scss
@@ -1,13 +1,30 @@
+@import "utils/mixins";
+
 .ScrollBtn {
-  width: 50px;
-  height: 50px;
+  width: 35px;
+  height: 35px;
+  bottom: 20px;
+  right: 20px;
+  position: fixed;
   border-radius: 50px;
   background: lightgray;
   opacity: 0.6;
-  position: fixed;
-  bottom: 30px;
-  right: 30px;
-  z-index: 9999;
+  z-index: 8;
+
+  &:hover {
+    opacity: 0.8;
+    a {
+      color: white;
+    }
+  }
+
+  @include forTablet {
+    width: 40px;
+    height: 40px;
+    bottom: 30px;
+    right: 30px;
+  }
+
   a {
     width: 100%;
     height: 100%;
