--- a/src/stylesheets/utils/_variables.scss
+++ b/src/stylesheets/utils/_variables.scss
@@ -6,10 +6,11 @@ $fontTitle: 'Quicksand', sans-serif;
 // DEVICES //
 
 $tablet: 768px;
-$pc: 1200px;
+$pc: 1000px;
 
 // COLORS //
 
+$colorBody: #2e2e2e;
 $colorHeader: #59c4ca;
 $colorProjects: #32e0ea;
 $colorAbout: #ce3635;
