--- a/src/stylesheets/Contact.scss
+++ b/src/stylesheets/Contact.scss
@@ -47,7 +47,7 @@
 
   .links {
     display: flex;
-    
+
     justify-content: space-between;
 
     @include forTablet {
@@ -55,9 +55,9 @@
     }
 
     a {
+      font-size: 20px;
       text-decoration: none;
       color: $colorContact;
-      font-size: 32px;
       display: block;
       position: relative;
 
@@ -72,19 +72,28 @@
         transition: all 0.3s;
 
         &:hover {
-          /* transform: rotate(35deg) skew(-20deg); */
           --transformed-box-diagonal-length: 164%;
           width: var(--transformed-box-diagonal-length);
           left: calc((100% - var(--transformed-box-diagonal-length)) / 2);
         }
       }
 
+      @include forTablet {
+        font-size: 32px;
+      }
+
       div {
         position: relative;
         display: block;
-        width: 55px;
-        height: 55px;
+        width: 30px;
+        height: 30px;
         transition: transform 0.3s;
+        margin: 5px;
+
+        @include forTablet {
+          width: 55px;
+          height: 55px;
+        }
       }
 
       span {
