--- a/src/stylesheets/About.scss
+++ b/src/stylesheets/About.scss
@@ -8,18 +8,20 @@
   border-left: 3px solid $colorAbout;
 
   &__icons {
-    width: 4vw;
-    height: 100vh;
+    width: 10vw;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    // border: 1px solid blue;
-    
+
+    @include forTablet {
+      width: 4vw;
+    }
+
     img {
       width: 55%;
     }
-
   }
 
   &__section {
@@ -30,200 +32,195 @@
     display: flex;
     width: 100%;
     min-height: 30vh;
+    flex-direction: row-reverse;
+
+    @include forPc {
+      flex-direction: row;
+    }
+  }
+
+  &__half {
+    @include forPc {
+      width: 50%;
+      position: relative;
+      overflow: hidden;
+
+      &:hover {
+        overflow: visible;
+        z-index: 10;
+        h3 {
+          color: $colorProjects;
+        }
+      }
+    }
+
+    .picture {
+      height: 100px;
+      background: url("http://localhost:3000//images/picture_maria_garvia.png")
+        top no-repeat;
+      background-size: contain;
+      @include forPc {
+        position: absolute;
+        height: 100%;
+        width: 50%;
+      }
+    }
+
+    .text {
+      text-align: justify;
+
+      @include forPc {
+        height: 100%;
+        width: 40vw;
+        position: absolute;
+        background: white;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        &:hover {
+          visibility: hidden;
+        }
+      }
+
+      p {
+        padding: 5px;
+      }
+
+      span {
+
+        color: #5e79bc;
+        font-weight: 600;
+        @include forPc {
+          // font-weight: 600;
+          // color: $colorProjects;
+        }
+      }
+    }
   }
 
   &__past {
-    width: 50%;
-    position: relative;
-    overflow: hidden;
+    height: fit-content;
 
     &:hover {
-      overflow: visible;
-      z-index: 10;
-      .About__past--info {
-        h3 {
-          color: $colorProjects;
-        }
+
+      h3, span {
+        color: #5e79bc;
+        font-weight: 600;;
       }
+    }
+
+    @include forPc {
+      height: auto;
     }
 
     &--image {
-      width: 50%;
-      height: 100%;
-      background: url("http://localhost:3000//images/picture_maria_garvia.png");
-      filter: grayscale(100%);
-      background-size: contain;
-      background-position: top;
-      background-repeat: no-repeat;
-      position: absolute;
-      right: -25%;
+      @include forPc {
+        filter: grayscale(100%);
+        right: -25%;
+      }
     }
 
     &--text {
-      text-align: justify;
-      height: 100%;
-      width: 40vw;
-      position: absolute;
-      right: -100%;
-      padding: 0px 10% 0 6%;
-      background: white;
-      box-sizing: border-box;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      padding: 15px;
 
-      &:hover {
-        visibility: hidden;
+      @include forTablet {
+        padding: 30px;
       }
 
-      span {
-        font-weight: 600;
-        color: $colorProjects;
+      @include forPc {
+        right: -100%;
+        padding: 0px 10% 0 6%;
       }
     }
 
     &--info {
-      text-align: right;
-      position: relative;
-      padding-left: 10%;
-      h3 {
+      display: none;
+
+      @include forPc {
         text-align: right;
-      }
-      p {
-        text-align: right;
-        right: 0;
+        position: relative;
+        padding-left: 10%;
+        h3 {
+          text-align: right;
+        }
+        p {
+          text-align: right;
+          right: 0;
+        }
       }
     }
   }
+
   &__future {
-    // background-color: lightblue;
-    width: 50%;
-    // min-height: 50vh;
-    position: relative;
-    overflow: hidden;
+    display: none;
 
     &:hover {
-      overflow: visible;
-      z-index: 10;
-      .About__future--info {
-        h3 {
-          color: $colorProjects;
-        }
+
+      h3, span {
+        color: #5e8c64;
+        font-weight: 600;;
       }
     }
 
-    &--image {
-      background: url("http://localhost:3000//images/picture_maria_garvia.png");
-      width: 50%;
-      height: 100%;
-      background-size: contain;
-      background-position: top;
-      background-repeat: no-repeat;
-      position: absolute;
-      left: -25%;
-    }
+    @include forPc {
+      display: inherit;
 
-    &--text {
-      text-align: justify;
-      height: 100%;
-      width: 40vw;
-      position: absolute;
-      left: -100%;
-      padding: 0px 6% 0 10%;
-      background: white;
-      box-sizing: border-box;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-      &:hover {
-        visibility: hidden;
+      &--image {
+        left: -25%;
+      }
+      &--text {
+        left: -100%;
+        padding: 0px 6% 0 10%;
       }
 
-      span {
-        font-weight: 600;
-        color: $colorProjects;
+      &--info {
+        right: 0;
+        padding-right: 10%;
       }
-    }
-
-    &--info {
-      right: 0;
-      padding-right: 10%;
-
-      // h3 {
-      //   text-align: right;
-      // }
     }
   }
 
   &__info-section {
-    // border: 1px solid red;
-    // margin-top: 30px;
-    width: 75%;
-    height: 100%;
-    position: absolute;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    @include forPc {
+      width: 75%;
+      height: 100%;
+      position: absolute;
+      box-sizing: border-box;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
 
-
-    h3 {
-      margin-bottom: 10px;
+      h3 {
+        margin-bottom: 10px;
+      }
     }
   }
 
   &__love {
-    // width: 100vw;
     text-align: center;
-    color: #ce3635;
-    font-size: 45px;
-    padding: 20px 0;
+    color: $colorAbout;
+    font-size: 18px;
+
+    @include forTablet {
+      font-size: 30px;
+      padding: 20px 0;
+    }
+
+    @include forPc {
+      font-size: 45px;
+    }
   }
 
   &__skills {
-    // border: 1px solid blue;
-    // width: 100vw;
-    padding: 20px;
-    box-sizing: border-box;
-    
-    @include forTablet {
-      display: flex;
+    display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    height: fit-content;
 
-    }
-
-    div {
-      box-shadow: 3px 3px lightgrey;
-      // border: 1px solid red;
-      width: 16vw;
-      height: 8vw;
-      border-radius: 5px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-
-      h3 {
-        font-weight: 600;
-        color: $colorProjects;
-      }
-
-      span {
-        padding: 0 5px;
-        margin-top: 5px;
-        font-size: 12px;
-        text-transform: uppercase;
-
-        span:first-child {
-          border-right: 1px solid lightgrey;
-        }
-
-        span:last-child {
-          border-left: 1px solid lightgrey;
-        }
-      }
+    @include forPc {
+      padding: 20px;
     }
 
     &--box {
@@ -231,62 +228,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-around;
-    }
-
-    &--hover {
-      position: absolute;
-      background-color: $colorProjects;
-      color: white;
-      visibility: hidden;
-
-      p {
-        font-weight: 600;
-      }
-
-    }
-
-    &--item:hover {
-            .About__skills--hover {
-        visibility: visible;
-      }
+      padding: 15px 0;
     }
   }
 }
-
-// .timeline {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: center;
-//   position: absolute;
-//   bottom: 60px;
-//   right: 0;
-//   width: 80%;
-//   // height: 40%;
-//   // position: relative;
-//   &__line {
-//     height: 2px;
-//     background-color: #d4c7c7e1;
-//     // margin-top: 100px;
-//   }
-//   &__icons {
-//     display: flex;
-//     flex-direction: row-reverse;
-//     justify-content: space-between;
-//     padding: 5px;
-    
-//     img {
-//       width: 30px;
-//       height: 20px;
-//     }
-//   }
-//   &__info {
-//     display: flex;
-//     flex-direction: row-reverse;
-//     justify-content: space-between;
-//     padding: 5px;
-//   }
-// }
-
-// .cv {
-//   min-height: 20vh;
-// }
