--- a/src/stylesheets/Projects.scss
+++ b/src/stylesheets/Projects.scss
@@ -48,7 +48,7 @@
     }
 
     .SingleProject {
-      border: 1px solid #fcfcfc;
+      // border: 1px solid #fcfcfc;
       max-height: 100vh;
       max-width: 100vw;
       position: relative;
@@ -57,6 +57,7 @@
       cursor: pointer;
 
       @include forTablet {
+        border: 1px solid #fcfcfc;
         flex: 50%;
         max-height: 50vw;
         max-width: 50vw;
@@ -106,6 +107,7 @@
         transition: visibility ease-in-out 0.5;
         padding: 5px;
         border-top: 3px solid white;
+        border-bottom: 3px solid white;
 
         * {
           margin: 2px;
@@ -191,7 +193,7 @@
         i {
           margin: 2px;
           font-size: 18px;
-          color: lightgrey;
+          color: whitesmoke;
         }
       }
     }
