docs without errors

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -52,3 +52,7 @@ a {
     color: $colorContact;
   }
 }
+
+.Menu__links {
+  background: url("http://localhost:3000//images/bg-menu.jpeg") center no-repeat;
+}
