--- a/src/stylesheets/Header.scss
+++ b/src/stylesheets/Header.scss
@@ -3,7 +3,7 @@
 
 .Header {
   &__content {
-    background: url("https://images.pexels.com/photos/1111317/pexels-photo-1111317.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260")
+    background: url("http://localhost:3000//images/bg-header.jpeg")
       center no-repeat;
     background-size: cover;
     height: 100vh;
