image routes amendments

--- a/src/stylesheets/Header.scss
+++ b/src/stylesheets/Header.scss
@@ -3,7 +3,7 @@
 
 .Header {
   &__content {
-    background: url("http://localhost:3000//images/bg-header.jpeg")
+    background: url("https://mgarvia.github.io/portfolio/images/bg-header.jpeg")
       center no-repeat;
     background-size: cover;
     height: 100vh;
