--- a/src/stylesheets/About.scss
+++ b/src/stylesheets/About.scss
@@ -56,7 +56,7 @@
 
     .picture {
       height: 100px;
-      background: url("http://localhost:3000//images/picture_maria_garvia.png")
+      background: url("https://mgarvia.github.io/portfolio/images/picture_maria_garvia.png")
         top no-repeat;
       background-size: contain;
       @include forPc {
