--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -54,5 +54,5 @@ a {
 }
 
 .Menu__links {
-  background: url("http://localhost:3000//images/bg-menu.jpeg") center no-repeat;
+  background: url("https://mgarvia.github.io/portfolio/images/bg-menu.jpeg") center no-repeat;
 }
